# zephyr-devcontainer-labs

./: Dockerfile  _Dockerfile
_archive/: Dockerfile.JohannesNeyer  Dockerfile.base  Dockerfile.ci  Dockerfile.devel
embreal_labs/lab1/: CMakeLists.txt
embreal_labs/lab1/.devcontainer/: devcontainer.json
embreal_labs/lab1/src/: main.c
embreal_labs/lab2/: CMakeLists.txt  MC1-Board.overlay  prj.conf
embreal_labs/lab2/.devcontainer/: devcontainer.json  docker-compose.yml
embreal_labs/lab2/src/: main.c
embreal_labs/lab3/: CMakeLists.txt  Kconfig  display_parameters_blue_board.overlay  display_parameters_green_board.overlay  main_hirarchy.c  prj.conf
embreal_labs/lab3/.devcontainer/: devcontainer.json
embreal_labs/lab3/src/: display.c  display.h  main.c
